--- a/ping_hosts.yml
+++ b/ping_hosts.yml
@@ -1,7 +1,6 @@
 ---
-- hosts: all
-  become_user: root
-  become: yes
+- name: playbook to ping hosts
+  hosts: all
   
   tasks:
     - name: ping all hosts
