--- a/patch.yml
+++ b/patch.yml
@@ -2,7 +2,7 @@
 - name: playbook to ping hosts
   hosts: all
   become: yes
-  become_method: su
+  remote_user: root
 
   tasks:
     - name: clean up the repos
