create a new playbook for patching server

--- a/patch.yml
+++ b/patch.yml
@@ -7,12 +7,16 @@
   tasks:
     - name: clean up the repos
       shell: yum clean all
+      args:
+        warn: no
 
     - name: repolist the repos
       shell: yum repolist all
+      warn: False
 
     - name: update the server
       shell: yum update
+      warn: False
 
     - name: reboot the hosts
       shell: shutdow -r now
