--- a/hello.yml
+++ b/hello.yml
@@ -1,6 +1,8 @@
 ---
 - name: Hello World!
-  hosts: "{{ survey_host }}"
+  hosts: all
+  vars:
+    actions: "{{ actions }}"
  
   tasks:
     - name: Hello World!
