update host_inventory for file

--- a/files/hosts_inventory.ini
+++ b/files/hosts_inventory.ini
@@ -1,25 +1,25 @@
 [centos]
-bary781.mylabserver.com
-bary782.mylabserver.com	
-bary783.mylabserver.com
-bary784.mylabserver.com
-bary785.mylabserver.com	
-bary786.mylabserver.com
+bary781.mylabserver.com  ansible_host=172.31.114.230
+bary782.mylabserver.com	 ansible_host=172.31.118.18
+bary783.mylabserver.com  ansible_host=172.31.115.12
+bary784.mylabserver.com  ansible_host=172.31.116.157
+bary785.mylabserver.com	 ansible_host=172.31.125.234
+bary786.mylabserver.com  ansible_host=172.31.123.71
 
 [labservers]
-bary783c.mylabserver.com	
-bary784c.mylabserver.com	
+bary783c.mylabserver.com	ansible_host=172.31.115.12
+bary784c.mylabserver.com	ansible_host=172.31.116.157
 
 [database]
-bary786c.mylabserver.com	
+bary786c.mylabserver.com	ansible_host=172.31.123.71
 
 [local]
-bary782c.mylabserver.com
+bary782c.mylabserver.com ansible_host=172.31.118.18
 
 [production]
-bary785.mylabserver.com	
-bary786.mylabserver.com
+bary785.mylabserver.com  ansible_host=172.31.125.234
+bary786.mylabserver.com  ansible_host=172.31.123.71
 
 [dev]
-bary781.mylabserver.com
-bary782.mylabserver.com
+bary781.mylabserver.com  ansible_host=172.31.114.230
+bary782.mylabserver.com  ansible_host=172.31.118.18
