--- a/files/hosts.ini
+++ b/files/hosts.ini
@@ -43,24 +43,26 @@
 ## db-[99:101]-node.example.com
 
 
-[local]
+[centos]
+bary782c.mylabserver.com	ansible_host=172.31.115.168
+bary785c.mylabserver.com	ansible_host=172.31.112.92
+bary781c.mylabserver.com	ansible_host=172.31.125.146
 bary782c.mylabserver.com	ansible_host=172.31.118.18
+bary785c.mylabserver.com	ansible_host=172.31.125.234
+bary781c.mylabserver.com	ansible_host=172.31.114.230
 
-[testservers]
-bary781.mylabserver.com   ansible_host=172.31.114.230
-bary782.mylabserver.com   ansible_host=172.31.118.18
-bary783.mylabserver.com   ansible_host=172.31.115.12
-bary784.mylabserver.com   ansible_host=172.31.116.157
-bary785.mylabserver.com   ansible_host=172.31.125.234
-bary786.mylabserver.com   ansible_host=172.31.123.71
+[rhel]
+bary783c.mylabserver.com	ansible_host=172.31.127.150
+bary784c.mylabserver.com	ansible_host=172.31.117.8
+bary783c.mylabserver.com	ansible_host=172.31.115.12
+bary784c.mylabserver.com	ansible_host=172.31.116.157
 
-[labservers]
-bary783c.mylabserver.com  ansible_host=172.31.115.12
-bary784c.mylabserver.com  ansible_host=172.31.116.157
+[database]
+bary788c.mylabserver.com	ansible_host=172.31.124.107
+bary786c.mylabserver.com	ansible_host=172.31.123.71
 
-
-[production]
-bary785.mylabserver.com   ansible_host=172.31.125.234
-bary786.mylabserver.com   ansible_host=172.31.123.71
+[local]
+bary781c.mylabserver.com	ansible_host=172.31.125.146
+bary782c.mylabserver.com	ansible_host=172.31.118.18
 
 
