--- a/files/hosts.ini
+++ b/files/hosts.ini
@@ -42,27 +42,36 @@
 
 ## db-[99:101]-node.example.com
 
-
-[centos]
-bary782c.mylabserver.com	ansible_host=172.31.115.168
-bary785c.mylabserver.com	ansible_host=172.31.112.92
-bary781c.mylabserver.com	ansible_host=172.31.125.146
-bary782c.mylabserver.com	ansible_host=172.31.118.18
-bary785c.mylabserver.com	ansible_host=172.31.125.234
+[production]
 bary781c.mylabserver.com	ansible_host=172.31.114.230
+bary782c.mylabserver.com	ansible_host=172.31.118.18
 
-[rhel]
-bary783c.mylabserver.com	ansible_host=172.31.127.150
-bary784c.mylabserver.com	ansible_host=172.31.117.8
+[staging]
 bary783c.mylabserver.com	ansible_host=172.31.115.12
 bary784c.mylabserver.com	ansible_host=172.31.116.157
 
+[dev]
+bary784c.mylabserver.com	ansible_host=172.31.116.157
+bary785c.mylabserver.com	ansible_host=172.31.125.234
+
+[labservers]
+bary782c.mylabserver.com	ansible_host=172.31.118.18
+bary785c.mylabserver.com	ansible_host=172.31.125.234
+bary781c.mylabserver.com	ansible_host=172.31.114.230
+bary783c.mylabserver.com	ansible_host=172.31.115.12
+bary784c.mylabserver.com	ansible_host=172.31.116.157
+bary786c.mylabserver.com	ansible_host=172.31.123.71
+
+[rhel]
+bary783c.mylabserver.com	ansible_host=172.31.115.12
+bary784c.mylabserver.com	ansible_host=172.31.116.157
+bary785c.mylabserver.com	ansible_host=172.31.125.234
+bary786c.mylabserver.com	ansible_host=172.31.123.71
+
 [database]
-bary788c.mylabserver.com	ansible_host=172.31.124.107
 bary786c.mylabserver.com	ansible_host=172.31.123.71
 
 [local]
-bary781c.mylabserver.com	ansible_host=172.31.125.146
 bary782c.mylabserver.com	ansible_host=172.31.118.18
 
 
