--- a/service-advance.yml
+++ b/service-advance.yml
@@ -6,9 +6,10 @@
     method: "{{ sftp }}"
     service: "{{ service_name }}"
   tasks: 
-    - include_tasks: service-management.yml
-    with_items:
-      - "{{ service }}"
-    loop_control:
-      loop_vars: service
+    - name: looping over service
+      include_tasks: service-management.yml
+      with_items:
+        - "{{ service }}"
+      loop_control:
+        loop_vars: service
 	  
