adding step to exclude the kernel patching

--- a/patch.yml
+++ b/patch.yml
@@ -19,6 +19,7 @@
       yum:
         name: '*'
         state: latest
+        exclude: kernel*
 
     - name: reboot the server
       shell: "sleep 5 && shutdown -r now"
