--- a/activate-puppet-agent.yml
+++ b/activate-puppet-agent.yml
@@ -15,7 +15,7 @@
         baseurl: http://yum.puppetlabs.com/puppet6/el/6/$basearch
         gpgcheck: yes
         gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-puppet6-release
-        enabled: yes
+        enabled: no
       when: (ansible_facts['distribution'] == "CentOS" and ansible_facts['distribution_major_version'] == "6") or
             (ansible_facts['distribution'] == "RedHat" and ansible_facts['distribution_major_version'] == "6")
 
@@ -24,7 +24,7 @@
         name: Puppet6
         description: "Puppet 6 Repository el 7 - $basearch"
         baseurl: http://yum.puppetlabs.com/puppet6/el/7/$basearch
-        gpgcheck: yes
+        gpgcheck: no
         gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-puppet6-release
         enabled: yes
       when: (ansible_facts['distribution'] == "CentOS" and ansible_facts['distribution_major_version'] == "7") or
@@ -72,3 +72,8 @@
 
     - name: Generate puppet certificate
       shell: "puppet agent --fingerprint"
+      register: puppet_agent
+      until: puppet_agent.rc == 0
+      retries: 5
+      delay: 2
+      ignore_errors: yes
