--- a/linux-patching.yml
+++ b/linux-patching.yml
@@ -29,11 +29,11 @@
 
     - name: upgrade packages via yum
       yum:
-        name={{ yum_name }}
-        state={{ yum_state }}
+        name="{{ yum_name }}"
+        state="{{ yum_state }}"
 #        disablerepo={{ yum_disablerepo }}
 #        enablerepo={{ yum_enablerepo }}
-        exclude={{ yum_exclude }}
+        exclude="{{ yum_exclude }}"
       become: "yes"
       register: yumcommandout
       when:
@@ -47,11 +47,11 @@
 
     - name: upgrade packages via dnf
       dnf:
-        name={{ dnf_name }}
-        state={{ dnf_state }}
+        name="{{ dnf_name }}"
+        state="{{ dnf_state }}"
 #        disablerepo={{ dnf_disablerepo }}
 #        enablerepo={{ dnf_enablerepo }}
-        exclude={{ dnf_exclude }}
+        exclude="{{ dnf_exclude }}"
       become: "yes"
       register: dnfcommandout
       when:
