--- a/patch_redhat_centos_ubuntu.yml
+++ b/patch_redhat_centos_ubuntu.yml
@@ -5,9 +5,9 @@
   max_fail_percentage: 0
   serial: 1
   become: yes
-  
+
   roles:
 #  - stop-applications
-    - server-update-reboot
+    - ansible_os_update
 #  - server-config-xyz
 #  - start-applications
