--- a/roles/ansible_os_update/defaults/main.yml
+++ b/roles/ansible_os_update/defaults/main.yml
@@ -9,8 +9,9 @@ server_update_reboot_reboot_timeout: 600
 #
 #For Redhat/CentOS: List of packages to not update (comma separated).
 #Can include wildcard to match multiple packages.
+server_update_yum_exclude_pkgs:
 #server_update_yum_exclude_pkgs: "mysql*, bash, openssh*"
-server_update_yum_exclude_pkgs: []
+#server_update_yum_exclude_pkgs: []
 #
 #For Redhat/CentOS: List of packages to ONLY update (comma separated).
 #Can include wildcard to match multiple packages.
@@ -21,9 +22,9 @@ server_update_yum_install_pkgs: '*'
 #
 #For Ubuntu: List of packages to not update (each on separate line).
 #Can include wildcard (but use ^ to begin match or a lot will match) to match multiple packages.
-server_update_apt_exclude_default: false
+#server_update_apt_exclude_default: false
 #server_update_apt_exclude_default: true
-#server_update_apt_exclude_pkgs:
+server_update_apt_exclude_pkgs:
 #  - ^mysql*
 #  - bash
 #  - ^openssh*
