update puppet activate url

--- a/roles/ansible_os_update/tasks/main.yml
+++ b/roles/ansible_os_update/tasks/main.yml
@@ -28,13 +28,13 @@
     seconds: "{{ server_update_reboot_pre_delay }}"
 
 - name: Check all current installed packages on RedHat and append results to /opt/update.txt
-  shell: "yum list installed > /opt/update-"`date +"%d-%m-%Y"`""
+  shell: yum list installed > /opt/update-"`date +"%d-%m-%Y"`"
   args:
     warn: no
   when: ansible_os_family == "RedHat"
 
 - name: Check all current installed packages on Ubuntu and append results to /opt/update
-  shell: "apt list --installed > /opt/update-"`date +"%d-%m-%Y"`""
+  shell: apt list --installed > /opt/update-"`date +"%d-%m-%Y"`"
   args:
     warn: no
   when: ansible_os_family == "Debian" or ansible_distribution == "Ubuntu"
