update puppet activate url

--- a/roles/ansible_os_update/tasks/main.yml
+++ b/roles/ansible_os_update/tasks/main.yml
@@ -115,7 +115,7 @@
       state: latest # noqa 10
       update_cache: yes
       exclude: "{{ server_update_yum_exclude_pkgs | default([]) }}"
-    environment: "{{ proxy_env }}"
+#    environment: "{{ proxy_env }}"
     register: stat_yum_upgrade_results
     until: "stat_yum_upgrade_results is success"
     retries: 10
