--- a/roles/ansible_os_update/defaults/main.yml
+++ b/roles/ansible_os_update/defaults/main.yml
@@ -9,9 +9,9 @@ server_update_reboot_reboot_timeout: 600
 #
 #For Redhat/CentOS: List of packages to not update (comma separated).
 #Can include wildcard to match multiple packages.
-#server_update_yum_exclude_pkgs:
+server_update_yum_exclude_pkgs:
 #server_update_yum_exclude_pkgs: "mysql*, bash, openssh*"
-server_update_yum_exclude_pkgs: []
+#server_update_yum_exclude_pkgs: []
 #
 #For Redhat/CentOS: List of packages to ONLY update (comma separated).
 #Can include wildcard to match multiple packages.
