--- a/reboot-linux.yml
+++ b/reboot-linux.yml
@@ -15,15 +15,13 @@
      async: 10 # Do not care for 10 sec
      poll: 0 # Fire & Forget
 
-   - name: wait for host to finish reb00t
-     wait_for:
-      port: "{{ (ansible_port|default(ansible_ssh_port))|default(22) }}"
-      host: '{{ (ansible_ssh_host|default(ansible_host))|default(inventory_hostname) }}'
-      search_regex: OpenSSH
-      delay: 10  # Do not check for at least 10 sec
-     connection: local
+   - name: wait for reboot to complete and SSH to become available 
+     wait_for_connection:
+       timeout: 600
+       dalay: 60
+     when: reboot_default | bool and reboot_hint_result | bool
 
-   - name: Check the uptime post reboot
+ name: Check the uptime post reboot
      shell: uptime
      register: UPTIME_POST_REBOOT
 
