--- a/reboot-linux.yml
+++ b/reboot-linux.yml
@@ -21,7 +21,7 @@
        dalay: 60
      when: reboot_default | bool and reboot_hint_result | bool
 
- name: Check the uptime post reboot
+   - name: Check the uptime post reboot
      shell: uptime
      register: UPTIME_POST_REBOOT
 
